--- a/style.css
+++ b/style.css
@@ -26,11 +26,6 @@ footer,
   text-align: right;
 }
 
-.left {
-  text-align: left;
-}
-
-
 /*- - - - - - - - - - TYPOGRAPHY - - - - - - - - - - - - - - -*/
 
 body {
@@ -51,14 +46,14 @@ span, .dark h3 {
 
 .banner h2 {
   color: white;
-  font-size: 2.8vw;
+  font-size: 1.5rem;
   text-align: center;
   font-weight: 400;
 }
 
 .padded h2 {
   color: rgb(60, 60, 65);
-  font-size: 1.5rem;
+  font-size: 1.7rem;
 }
 
 .padded p, .dark p {
@@ -139,7 +134,7 @@ footer {
 }
 
 .dark h2, .dark h3 {
-  font-size: 2.2rem;
+  font-size: 2rem;
   line-height: 1;
 }
 
@@ -160,6 +155,7 @@ input, textarea {
   width: 100%;
   font-size: .8rem;
   color: grey;
+  font-family: 'Montserrat', sans-serif
 }
 
 input {
@@ -172,24 +168,35 @@ textarea {
   padding: 2%;
 }
 
-select {
-    width: 100%;
-    padding: 20px 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: #f1f1f1;
-}
 
 .button {
   margin-top: 1.5%;
   background-color: #ffbe00;
   color:white;
   text-transform:uppercase;
-  font-size: 1.5vw;
-  transition: .2s;
+  font-size: 1rem;
+  transition: .5s;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .button:hover {
   background-color: white;
   color: #ffbe00;
+}
+
+/*- - - - - - - - - - - - MEDIA QUERIES - - - - - - - - - - - */
+@media(max-width:768px) {
+  [class*=bg]{
+    padding-bottom: 50%;
+  }
+  .mob-reverse {
+    flex-direction: column-reverse;
+  }
+  .banner {
+    padding: 5%;
+  }
+  .padded p, .dark p {
+    font-size: .8rem;
+  }
+
 }
