--- a/style.css
+++ b/style.css
@@ -162,7 +162,6 @@ input, textarea {
 input {
   min-height: 5vh;
   padding: 2%;
-  appearance: none;
 }
 
 textarea {
@@ -205,9 +204,8 @@ textarea {
     margin:auto;
   }
 
-  .button{
-
-  }
-
-
+  .button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
