--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 *{
   margin:0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 /*- - - - - - UNIVERSAL STYLES - - - - - - - - - - -*/
@@ -176,6 +177,7 @@ textarea {
   color:white;
   text-transform:uppercase;
   font-size: 1rem;
+  -webkit-transition: .5s;
   transition: .5s;
   font-family: 'Montserrat', sans-serif;
 }
@@ -191,7 +193,10 @@ textarea {
     padding-bottom: 50%;
   }
   .mob-reverse {
-    flex-direction: column-reverse;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
   }
   .banner {
     padding: 5%;
@@ -208,4 +213,5 @@ textarea {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+}
 }
